--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,13 @@ services:
       POSTGRES_DB: flightdb
     ports:
       - "5433:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U admin -d flightdb"]
       interval: 5s
       timeout: 5s
       retries: 5
+
+volumes:
+  pgdata:
